# asesorIA

./: Example.env  README.md  pyproject.toml  run.sh
app/: main.py
app/configs/: db.py  lifespan.py  llm.py  telegram.py
app/routers/: mcp_router.py
app/schemas/: chat_schema.py
app/services/: generate_answer_agent_service.py  get_tools_service.py
app/tools/: math_tools.py
app/utils/: custom_error.py  escape_markdown_v2.py  settings.py
